<resources>
    <string name="app_name">Operation</string>
    <string name="title_activity_tech">TechActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Login">Login</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="elec">كهرباء</string>
    <string name="mecha">ميكانيكا</string>
    <string name="permit">اوامر الشغل</string>
    <string name="emp">شئون عاملين</string>
    <string name="techa">شئون فنية</string>
    <string name="home">Back</string>
    <string name="tranc">Transformers</string>
    <string name="dis">Dis_Sg_Mcc</string>
    <string name="dsm">Dis_Sg_Mcc</string>
    <string name="chinv">Chargers_Inverters</string>
    <string name="chin">Chargers , Inverters</string>
    <string name="fans">Fans</string>
    <string name="etech">Technical</string>
    <string name="transformers">Transformers</string>
    <string name="ct1">CT_1</string>
    <string name="main">Main</string>
    <string name="oiltemp">Oil.Temp</string>
    <string name="windtemp">WindTemp</string>
    <string name="leakagecurrent">LeakageCurrent</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="aux">Aux</string>
    <string name="xtemp">X_Temp</string>
    <string name="ytemp">Y_Temp</string>
    <string name="tap">Tap</string>
    <string name="ch">Ch</string>
    <string name="c">C</string>
    <string name="excitation">Excitation</string>
    <string name="temp">Temp</string>
    <string name="_1">1</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="ct2">CT_2</string>
    <string name="_1_">1</string>
    <string name="_2_">2</string>
    <string name="_3_">3</string>
    <string name="st">ST</string>
    <string name="C">C</string>
    <string name="C_">C</string>
    <string name="_c">C</string>
    <string name="charger">Charger</string>
    <string name="load">Load</string>
    <string name="ch1">Ch1</string>
    <string name="ch2">Ch2</string>
    <string name="ch3">Ch3</string>
    <string name="ch4">Ch4</string>
    <string name="ch5">Ch5</string>
    <string name="ch6">Ch6</string>
    <string name="ch7">Ch7</string>
    <string name="ch8">Ch8</string>
    <string name="ch9">Ch9</string>
    <string name="mv">Mv</string>
    <string name="mc">Mc</string>
    <string name="dcv">DcV</string>
    <string name="av">Av</string>
    <string name="dcc">DcC</string>
    <string name="inverter">Inverter</string>
    <string name="bc">Bc</string>
    <string name="diesel">Diesel</string>
    <string name="ot">OT</string>
    <string name="wt">WT</string>
    <string name="heater">Heater</string>
    <string name="water">Water</string>
    <string name="k6">K6</string>
    <string name="k6v">K6V</string>
    <string name="v1">V1</string>
    <string name="k1">K1</string>
    <string name="k2">K2</string>
    <string name="k3">K3</string>
    <string name="k4">K4</string>
    <string name="k5">K5</string>
    <string name="k66">K6</string>
    <string name="v2">V2</string>
    <string name="v3">V3</string>
    <string name="p">P</string>
    <string name="lc">LC</string>
    <string name="income1">Income1</string>
    <string name="income2">Income2</string>
    <string name="lc1">LC1</string>
    <string name="lc2">LC2</string>
    <string name="lc3">LC3</string>
    <string name="lc4">LC4</string>
    <string name="mcc">Mcc</string>
    <string name="a">A</string>
    <string name="m01">M01</string>
    <string name="m02">M02</string>
    <string name="m03">M03</string>
    <string name="m04">M04</string>
    <string name="m05">M05</string>
    <string name="m06">M06</string>
    <string name="gasArea">GasArea</string>
    <string name="r1">R.1</string>
    <string name="r2">R.2</string>
    <string name="package">Package</string>
    <string name="controlPackage">ControlPackage</string>
    <string name="package_">Package</string>
    <string name="SwitchGear">SwitchGear</string>
    <string name="level_0">Level 0</string>
    <string name="ct1_panal">CT.1_Panal</string>
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="sf_01">SF-01</string>
    <string name="sf_02">SF-02</string>
    <string name="title_activity_test">Test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="aut">AUT</string>
    <string name="man">MAN</string>
    <string name="off_">OFF</string>
    <string name="sf_09">SF-09</string>
    <string name="sf_10">SF-10</string>
    <string name="sf_11">SF-11</string>
    <string name="sf_12">SF-12</string>
    <string name="sf_03">SF-03</string>
    <string name="sf_04">SF-04</string>
    <string name="sf_05">SF-05</string>
    <string name="sf_06">SF-06</string>
    <string name="sf_07">SF-07</string>
    <string name="sf_08">SF-08</string>
    <string name="st1_panal">st1_panal</string>
    <string name="st_panal">ST-Panel\'s</string>
    <string name="st_ex01">St_Ex01</string>
    <string name="st_ex02">St_Ex02</string>
</resources>