<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <EditText
            android:id="@+id/etuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            android:ems="10"
            android:hint="@string/enter_user_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:autofillHints="" />

        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:layout_gravity="center"
            android:layout_marginTop="25dp" />

    </LinearLayout>

</RelativeLayout>